[gd_scene format=3 uid="uid://dhx73mwoam3fo"]

[ext_resource type="Script" uid="uid://fymsm6hy4xvx" path="res://scripts/Player.gd" id="1_kpjcp"]
[ext_resource type="Texture2D" uid="uid://k0yrfcq4ftwy" path="res://icon.svg" id="1_xhfnw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4flbx"]
radius = 62.0
height = 124.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kpjcp"]
radius = 101.92154

[node name="Player" type="CharacterBody2D" unique_id=127319239]
script = ExtResource("1_kpjcp")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1191615150]
texture = ExtResource("1_xhfnw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=701037758]
shape = SubResource("CapsuleShape2D_4flbx")

[node name="InteractArea" type="Area2D" parent="." unique_id=38599748]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea" unique_id=704558696]
shape = SubResource("CircleShape2D_kpjcp")

[node name="Camera2D" type="Camera2D" parent="." unique_id=1548173975]
zoom = Vector2(2, 2)
limit_left = -768
limit_top = -512
limit_right = 768
limit_bottom = 512

[connection signal="area_entered" from="InteractArea" to="." method="_on_interact_area_area_entered"]
[connection signal="area_exited" from="InteractArea" to="." method="_on_interact_area_area_exited"]
